# stt-rs

./: .gitignore  Cargo.toml  PLAN.md  README.md  config.example.toml
benches/: preprocessing.rs  vad.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/audio/: buffer.rs  capture.rs  mod.rs  preprocessing.rs  vad.rs
src/output/: formats.rs  mod.rs
src/stt/: engine.rs  mod.rs
tests/: integration_tests.rs
